refactor: 업로드 DB Job Queue 전환 및 Kafka 비의존 테스트 안정화 (#84)
* refactor: 파일 업로드를 Kafka 이벤트 기반에서 DB 기반 Job 스케줄러로 변경

- Kafka 이벤트(FileUploadCompletedEvent, FileUploadFailedEvent) 및 Consumer 삭제
- FileUploadJob 엔티티 및 Repository 추가: 업로드 상태, 재시도 횟수, 에러 로그 관리
- FileUploadJobScheduler 구현: 주기적으로 Pending 상태의 작업을 조회하여 업로드 수행
- 파일 Staging 메커니즘(StagePdfStorage) 도입 및 만료된 Stage 파일 정리(StagePdfFileReaper) 기능 추가
- FileUploadService 로직 변경: 즉시 비동기 호출 대신 파일 Stage 후 Job 생성
- Executor(Local, S3)에서 이벤트 발행 로직 제거 및 URL 생성 메서드 추가
- application-prod.yml 설정 파일 및 각 패키지별 AGENTS.md 문서 추가

* Squashed commit of the following:

commit 2bd3bc215ee1088aaefd4cf1c55d9abd1629d571
Author: omegafrog <jiwoo22110103@gmail.com>
Date:   Thu Nov 20 14:14:14 2025 +0900

    feat: autocomplete 추가

commit fc00aa4038208eb21a3166a796a2f0be19c701cc
Author: omegafrog <jiwoo22110103@gmail.com>
Date:   Mon Nov 17 16:30:28 2025 +0900

    feat: 검색 로그 저장

* refactor: 업로드 DB 작업큐 전환 및 Kafka 비의존 테스트 안정화